--- a/ManchesterCity/manchestercity.html
+++ b/ManchesterCity/manchestercity.html
@@ -17,7 +17,7 @@
     </header>
     <nav>
         <!--[MENU]-->
-        <a href="index.html">HOME</a>
+        <a href="../index.html">HOME</a>
         <a href="#">CURIOSIDADES</a>
         <a href="#">SOBRE</a>
         <a href="#">FALE CONOSCO</a>
