--- a/index.html
+++ b/index.html
@@ -23,17 +23,26 @@
     <main>
         <h1>História do Futebol</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae ut quisquam adipisci officia vitae at ducimus earum possimus ea, optio explicabo nihil sit harum dolore nam, fuga deserunt qui maxime. Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, at? Voluptatum in temporibus quidem, non quos animi esse quas exercitationem doloremque provident aspernatur vitae quae eaque inventore, ad deleniti fuga. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam, harum inventore veritatis eos cum natus voluptas nulla facere eius? Ea, quibusdam libero praesentium commodi eum omnis consequatur est voluptatibus accusantium?</p>
-        <a href="manchestercity.html"><h1>MANCHESTER CITY CLUB FOOTBALL</h1></a>
+
+        <a href="ManchesterCity/manchestercity.html">
+            <h2>MANCHESTER CITY CLUB FOOTBALL</h2>
+        </a>
         <picture>
-            <source media="(max-width:900px)" srcset="ManchesterCity/imagens/manchester-city-fc-logo-700.png">
+            <source media="(max-width:900px)" srcset="ManchesterCity/imagens/manchester-city-fc-logo-400.png">
             <img src="ManchesterCity/imagens/manchester-city-fc-logo-700.png" alt="Site sobre o Manchester City">
         </picture>
-        <h1>MANCHESTER UNITED</h1>
+
+        <a href="Manchester_United/manchester-united.html">
+            <h2>MANCHESTER UNITED</h2>
+        </a>
         <picture>
             <source media="(max-width:900px)" srcset="Manchester_United/imagens/png-transparent-manchester-united-400-removebg-preview.png">
             <a href="#"><img src="Manchester_United/imagens/png-transparent-manchester-united-700-removebg-preview.png" alt="Site sobre o Manchester United"></a>
         </picture>
-        <h1>SANTOS</h1>
+        
+        <a href="Santos/santos.html">
+            <h2>SANTOS</h2>
+        </a>
         <picture>
             <source media="(max-width: 900px)" srcset="Santos/imagens/santos-logo400-removebg-preview.png">
             <a href="#"><img src="Santos/imagens/santos-logo700-removebg-preview.png" alt="Site sobre o Santos"></a>
