--- a/Manchester_United/manchester-united.html
+++ b/Manchester_United/manchester-united.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manchester United</title>
-    <link rel="shortcut icon" href="imagens/Manchester_City/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="estilos/Manchester_United/style.css">
 </head>
 <body>
@@ -30,7 +29,7 @@
         <p>O <strong>Manchester United</strong> Lorem ipsum dolor sit amet consectetur adipisicing elit. A eaque laborum aperiam debitis optio nulla quisquam, quos magnam impedit consequatur cum facilis praesentium temporibus alias accusamus, exercitationem magni dignissimos provident.<a href="#">Premier League</a>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam ad quis odit adipisci repellendus? Ullam, repudiandae! Voluptatem quia repudiandae, rem non soluta delectus rerum unde perspiciatis dignissimos, eum corrupti. Tenetur?</p>
         <picture>
             <source media="(max-width:900px)" srcset="imagens/jogadores-pq.jpg">
-            <img src="imagens/jogadores-gd.jpg" alt="Jogadores do Manchester City comemoram gol">
+            <img src="imagens/jogadores-gd.jpg" alt="Jogadores do Manchester United comemoram gol">
         </picture>
         <h2>História</h2>
         <p>
@@ -42,7 +41,7 @@
         </p>
         <picture>
             <source media="(max-width:900px)" srcset="imagens/estadio-pq.png">
-            <img src="imagens/estadio-gd.png" alt="Etihad Stadium, Estádio do Manchester City Club Football">
+            <img src="imagens/estadio-gd.png" alt="Old traford, Estádio do Manchester United Club Football">
         </picture>
         <h2>Mudanças no escudo</h2>
         <p>
@@ -50,7 +49,7 @@
         </p>
         <picture>
             <source media="(max-width:900px)" srcset="imagens/logos-pq.jpg">
-            <img src="imagens/logos-gd.jpg" alt="Mudanças de escudo do Manchester City">
+            <img src="imagens/logos-gd.jpg" alt="Mudanças de escudo do Manchester United">
         </picture>
         <h2>Recordes</h2>
         <p>
@@ -59,33 +58,33 @@
         <h3>Outros recordes:</h3>
         <ul>
             <li>
-                Mais pontos marcados na temporada - 100 pontos
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
             </li>
             <li>
-                Campeão nacional com maior antecedência - 5 rodadas igualando o United (2000-01)
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
             </li>
             <li>
-                Mais vitórias numa só temporada da Premier League - 32 pontos
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
             </li>
             <li>
-                Campeão com melhor saldo de gols - 79 gols
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
             </li>
             <li>
-                Maior número de vitórias fora de casa na temporada - 16 vitórias
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
             </li>
             <li>
-                Mais vitórias consecutivas - 18 vitórias (da 3ª rodada à 20ª rodada)
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
             </li>
             <li>
-                Mais gols marcados na temporada - 106 gols
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
             </li>
             <li>
-                Maior diferença para o segundo colocado - 19 pontos
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
             </li>
         </ul>
         <picture>
             <source media="(max-width:900px)" srcset="imagens/recordes-pq.jpg">
-            <img src="imagens/recordes-gd.jpg" alt="Equipe do Manchester City levanta o troféu após bater vários recordes">
+            <img src="imagens/recordes-gd.jpg" alt="Equipe do Manchester United levanta o troféu">
         </picture>
         <h2>Títulos</h2>
         <p>
@@ -93,27 +92,33 @@
         </p>
         <ul>
             <li>
-                1 Recopa Europeia (1969-70)
+                1 Recopa Europeia (1990-91)
             </li>
             <li>
-                7 Campeonatos Ingleses (1936-37,1967–68, 2011–12, 2013–14, 2017–18, 2018–19 e 2020–21)
+                20 Campeonatos Ingleses (1907-08,1910-11, 1951–52, 1955–56, 1956–57, 1964-65, 1966-67, 1992-93, 1993-94, 1995-96, 1996-97, 1998-99, 1999-00, 2000-01, 2002-03, 2006-07,2007-08,2008-09, 2010-11, 2012-13)
             </li>
             <li>
-                6 Copas da Inglaterra (1903–04, 1933–34, 1955–56, 1968–69, 2010–11 e 2018–19)
+                12 Copas da Inglaterra (1908–09, 1947–48, 1962–63, 1976-77, 1982–83, 1984–85, 1989–90, 1993–94, 1995–96, 1998-99, 2003-04, 2016-17)
             </li>
             <li>
-                6 Supercopa da Inglaterra (1937, 1968, 1972, 2012, 2018 e 2019)
+                21 Supercopa da Inglaterra
             </li>
             <li>
-                8 Copas da Liga Inglesa (1969–70, 1975–76, 2013–14, 2015–16, 2017–18, 2018–19, 2019–20 e 2020–21)
+                5 Copas da Liga Inglesa (1991–92, 2005–06, 2008–09, 2009–10, 2016–17)
             </li>
             <li>
-                7 Campeonatos ingleses da Segunda divisão(1898–99, 1902–03, 1909–10, 1927–28, 1946–47, 1965–66 e 2001–02)
+                2 Campeonatos ingleses da Segunda divisão(1935–36, 1974–75)
+            </li>
+            <li>
+                3 Champions League(1967-68, 1998-99, 2007-08)
+            </li>
+            <li>
+                2 Mundiais (1998-99, 2007-08)
             </li>
         </ul>
         <picture>
             <source media="(max-width:900px)" srcset="imagens/trofeus-pq.jpg">
-            <img src="imagens/trofeus-gd.jpg" alt="troféus conquistados na temporada 2017-18 são exibidos em Curitiba">
+            <img src="imagens/trofeus-gd.jpg" alt="troféus conquistados">
         </picture>
         <h2>Curiosidade</h2>
         <p>
